@startuml
class GameModeManager {
    - Start() : void
}
class GameMode {
    + hasMaxPlayers : bool
    + maxPlayerCount : int
    + hasTeams : bool
    + teamCount : int
    + useTime : bool
    + timeInSeconds : float
    + useKills : bool
    + killsToWin : int
    + usePoints : bool
    + pointsToWin : int
    + getGameModeInfo() : string
}
enum GameModeTypes {
    OneVsOne,
    OneVsOneDeathmatch,
}
class "List`1"<T> {
}
class "Dictionary`2"<T1,T2> {
}
MonoBehaviour <|-- GameModeManager
GameModeManager o-> "_gameModes<GameMode>" "List`1"
GameModeManager o-> "gameModes<GameModeTypes,GameMode>" "Dictionary`2"
GameMode --> "gameModeType" GameModeTypes
@enduml
